[package]
name = "iced_tcp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.3.0"
iced_native = "0.4.0"
iced_futures = "0.3.0"
tokio = {version = "1.5", features = ["time", "sync", "net", "io-util", "macros"]}